# SmokeSight

./: .pre-commit-config.yaml  ACRFQIU.jl  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
acrfqiu/: __init__.py  estimator.py
scenarios/: cal_panel_reference.yaml  synthetic_gaussian.yaml  synthetic_screen.yaml
smokesight/: __init__.py  _atmos.py  _geometry.py  _results.py  _sensor.py  _types.py  _uncertainty.py  background.py  calibrate.py  io.py
tests/: conftest.py  test_atmos.py  test_background.py  test_calibrate.py  test_geometry.py  test_io.py  test_results.py  test_sensor.py  test_uncertainty.py
