[metadata]
name = smokesight
version = 0.1.0
author = SmokeSight Contributors
license = Apache-2.0
description = Radiometric plume measurement from EO/IR video
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    imageio>=2.19
    imageio-ffmpeg>=0.4.7
    pyyaml>=6.0
    scipy>=1.7
    netCDF4>=1.6
    xarray>=2022.3
    click>=8.0
    tqdm>=4.64

[options.extras_require]
calibrate =
    py6s>=1.9
    pymodtran>=1.0
dev =
    pytest>=7
    pytest-cov>=4
    mypy>=1.0
    pre-commit>=3
    black>=23
    isort>=5
    flake8>=6
    nbsphinx>=0.9
    sphinx>=6
    types-PyYAML>=6.0
    types-tqdm>=4.64

[options.package_data]
smokesight = py.typed

[options.entry_points]
console_scripts =
    smokesight = smokesight.cli:main
